--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -3,17 +3,17 @@ services:
     class: Kooli\CatalogPromotion\Promotion\Processor
     arguments:
       - '@sylius.repository.promotion'
-      - '@sylius.repository.product_variant'
-      - '@catalog-promotion.eligibility-filter'
-      - '@catalog-promotion.channel-pricing-promotion-applicator'
-
-  catalog-promotion.eligibility-filter:
-    class: Kooli\CatalogPromotion\Promotion\PromotionEligibilityFilter
-    arguments:
-      - '@catalog-promotion.has-taxon-rule-checker'
+    calls:
+      - [addRuleChecker,['has_taxon','@catalog-promotion.has-taxon-rule-checker']]
 
   catalog-promotion.has-taxon-rule-checker:
     class: Kooli\CatalogPromotion\Promotion\Checker\Rule\HasTaxonRuleChecker
 
   catalog-promotion.channel-pricing-promotion-applicator:
     class: Kooli\CatalogPromotion\Promotion\Applicator\ChannelPricingPromotionApplicator
+
+  sylius.calculator.product_variant_price:
+    class: Kooli\CatalogPromotion\Promotion\ProductVariantPriceCalculator
+    arguments:
+      - '@catalog-promotion.processor'
+
