add package name

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,6 +4,9 @@
          xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/5.6/phpunit.xsd"
          backupGlobals="false"
          colors="true"
+         convertErrorsToExceptions="true"
+         convertNoticesToExceptions="true"
+         convertWarningsToExceptions="true"
 >
     <php>
         <server name="FIXTURES_DIR" value="/tests/DataFixtures"/>
