Add admin interface

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -18,3 +18,8 @@ services:
     arguments:
       - '@catalog-promotion.processor'
 
+  catalog-promotion.admin.menu_builder:
+    class: SnakeTn\CatalogPromotion\Menu\AdminMenuListener
+    tags:
+      - { name: kernel.event_listener, event: sylius.menu.admin.main, method: addAdminMenuItems }
+
