add admin panel

--- a/src/Resources/config/app/config.yml
+++ b/src/Resources/config/app/config.yml
@@ -4,5 +4,6 @@ sylius_resource:
             driver: doctrine/orm
             classes:
                 model: SnakeTn\CatalogPromotion\Entity\Promotion
+                form: SnakeTn\CatalogPromotion\Form\Type\PromotionType
 imports:
     - { resource: "@CatalogPromotionPlugin/Resources/config/grids/promotions.yml" }
