--- a/src/Resources/config/doctrine/Promotion.orm.yml
+++ b/src/Resources/config/doctrine/Promotion.orm.yml
@@ -34,6 +34,7 @@ SnakeTn\CatalogPromotion\Entity\Promotion:
     updatedAt:
       type: datetime
       column: updated_at
+      nullable: true
   manyToMany:
     channels:
       targetEntity: Sylius\Component\Channel\Model\ChannelInterface
