add option form

--- a/src/Resources/config/forms.yml
+++ b/src/Resources/config/forms.yml
@@ -9,4 +9,13 @@ services:
       class: SnakeTn\CatalogPromotion\Form\Type\PromotionRuleCollectionType
       tags:
           - { name: form.type }
-      arguments: ['@sylius.registry_promotion_rule_checker']
+      arguments: ['@catalog-promotion.registry_promotion_rule_checker']
+
+  catalog-promotion.form.type.promotion_rule:
+    class: SnakeTn\CatalogPromotion\Form\Type\PromotionRuleType
+    arguments:
+      - SnakeTn\CatalogPromotion\Entity\PromotionRule
+      - [sylius]
+      - '@catalog-promotion.form_registry.promotion_rule_checker'
+    tags:
+      - { name: form.type}
