Correct promotion edit form

--- a/src/Resources/config/doctrine/PromotionAction.orm.yml
+++ b/src/Resources/config/doctrine/PromotionAction.orm.yml
@@ -15,3 +15,6 @@ SnakeTn\CatalogPromotion\Entity\PromotionAction:
     promotion:
       targetEntity: SnakeTn\CatalogPromotion\Entity\Promotion
       inversedBy: actions
+      joinColumn:
+        name: promotion_id
+        referencedColumnName: id
