add product rule checker

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -16,6 +16,10 @@ services:
     class: SnakeTn\CatalogPromotion\Promotion\Checker\Rule\HasOptionRuleChecker
     tags: [{name: catalog-promotion.rule-checker, type: has_option, label: Has at least one from option values, form-type: SnakeTn\CatalogPromotion\Form\Type\Rule\HasOptionValueConfigurationType}]
 
+  catalog-promotion.has-product-rule-checker:
+    class: SnakeTn\CatalogPromotion\Promotion\Checker\Rule\HasProductRuleChecker
+    tags: [{name: catalog-promotion.rule-checker, type: has_product, label: Product is one of, form-type: Sylius\Bundle\CoreBundle\Form\Type\Promotion\Rule\ContainsProductConfigurationType}]
+
   catalog-promotion.fixed-discount-action-executor:
     class: SnakeTn\CatalogPromotion\Promotion\Action\FixedDiscountPromotionActionExecutor
     arguments:
