--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,8 @@
     }
   },
   "require-dev": {
-
+    "phpunit/phpunit": "^6.2",
+    "liip/functional-test-bundle": "^1.7",
+    "nelmio/alice": "^2.3"
   }
 }
