--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,35 @@
 {
-  "name": "sylius/plugin-skeleton",
+  "name": "snake-tn/catalog-promotion-plugin",
   "type": "sylius-plugin",
-  "description": "Acme example plugin for Sylius.",
+  "description": "Add catalog promotion to sylius application.",
+  "keywords": [
+    "sylius",
+    "symfony"
+  ],
   "license": "MIT",
+  "authors": [
+    {
+      "name": "Ahmed Kooli"
+    }
+  ],
+  "minimum-stability": "beta",
   "require": {
-    "php": "^5.6|^7.0",
-
-    "sylius/sylius": "^1.0.0@beta"
+    "sylius/sylius": "^1.0.0@beta",
+    "webmozart/assert": "*",
+    "symfony/symfony": "<3.3"
   },
-  "require-dev": {
-    "behat/behat": "^3.3",
-    "behat/mink": "^1.7",
-    "behat/mink-browserkit-driver": "^1.3",
-    "behat/mink-extension": "^2.2",
-    "behat/mink-selenium2-driver": "^1.3",
-    "friends-of-behat/context-service-extension": "^0.3",
-    "friends-of-behat/cross-container-extension": "^0.2",
-    "friends-of-behat/performance-extension": "^1.0",
-    "friends-of-behat/service-container-extension": "^0.3",
-    "friends-of-behat/symfony-extension": "^0.2.1",
-    "friends-of-behat/variadic-extension": "^0.1",
-    "lakion/mink-debug-extension": "^1.2.3",
-    "se/selenium-server-standalone": "^2.52"
+  "config": {
+    "bin-dir": "bin"
   },
   "autoload": {
     "psr-4": {
-      "Acme\\ExamplePlugin\\": "src/",
-      "Tests\\Acme\\ExamplePlugin\\": "tests/"
+      "SnakeTn\\CatalogPromotion\\": "src",
+      "Tests\\SnakeTn\\CatalogPromotion\\": "tests"
     }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^6.2",
+    "liip/functional-test-bundle": "^1.7",
+    "nelmio/alice": "^2.3"
   }
 }
