--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
   ],
   "require": {
     "sylius/sylius": "^1.0@beta",
-    "webmozart/assert": "*",
-    "symfony/symfony": "<3.3"
+    "webmozart/assert": "*"
   },
   "config": {
     "bin-dir": "bin"
@@ -27,7 +26,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.2",
+    "phpunit/phpunit": ">=5.6",
     "liip/functional-test-bundle": "^1.7",
     "nelmio/alice": "^2.3"
   }
