--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   ],
   "require": {
     "php": "^7.1",
-    "sylius/sylius": "^1.0@beta",
+    "sylius/sylius": "^1.0.0",
     "webmozart/assert": "*"
   },
   "config": {
